--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -16,3 +16,21 @@
     font-size: 5rem;
     line-height: 6rem;
 }
+.hero h1 span{
+    color: var(--secundary);
+}
+.hero h2{
+    font-size: 2rem;
+    font-weight: normal;
+    margin: 3rem 0;
+}
+
+@media(width>900px){
+    .hero{
+        background-image: url('../images/hero.png');
+        background-size: auto;
+    }
+    .hero .box{
+        padding: 15rem 2rem;
+    }
+}
